# FairX

./: .env.example  .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  DEMO_VIDEO.md  DEPLOYMENT.md  INTERVIEW.md  POLYMARKET_REFERENCE.md  PRODUCT_TRUTH.md  PROOF.md  README.md  REMOVED_FEATURES.md  SUBMISSION.md  TXLINE.md  VIDEO_SCRIPT.md  VIDEO_SCRIPT_FINAL.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
app/attack-lab/: page.tsx
app/create/: layout.tsx  page.tsx
docs/: v4-phase-b1-reproducibility.md  v4-phase-c-deployment-plan.md
hooks/: useReplay.ts  useRuntimeStatus.ts  useTxLineStream.ts
lib/: provenance.test.ts  provenance.ts
lib/bot/: sniper.ts
programs/fairx_vault_v4/: Cargo.toml
programs/fairx_vault_v4/src/: lib.rs
programs/lineguard/: Cargo.toml
programs/lineguard/src/: lib.rs
scripts/: fairx-initialize-live-market.ts  fairx-prepare-live-market.ts  fairx-v4-construct-deployment.ts  fairx-v4-finalize-lifecycle.ts  fairx-v4-litesvm-lifecycle.ts  fairx-v4-record-lifecycle.ts  fairx-v4-reproducibility.sh  fairx-v4-send-continuation.ts  fairx-v4-verify-lifecycle.ts  fairx-v4-verify-proofs.ts  fairx-v4-void-litesvm.ts  lineguard-record-proof.ts  lineguard-record-settlement.ts  lineguard-v2-initialize.ts  lineguard-v3-record-lifecycle.ts  polymarket-capture.ts  polymarket-discover.ts  polymarket-verify-capture.ts  txline-activate.mjs  txline-capture.ts  txline-validate.ts  txline-verify-capture.ts
tests/: lineguard-onchain.ts  lineguard-v2.ts
(+277 files in other folders)
