[package]
name = "lineguard"
version = "0.1.0"
description = "LineGuard on-chain settlement guard"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]
name = "lineguard"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.1.2", features = ["init-if-needed"] }
solana-sha256-hasher = "3.1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
